[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
evalexpr = "11.3.0"
scraper = "0.12.0"
reqwest = {version = "0.11", features = ["blocking"]}

